--- a/meesho/src/App.css
+++ b/meesho/src/App.css
@@ -273,3 +273,72 @@
   display: flex;
   flex-direction: column;
 }
+
+.navbar {
+  width: 100%;
+  height: 60px;
+  border-bottom: 1px solid #acbbbc;
+  padding: 0px 20px;
+  position: relative;
+}
+
+
+.navbar ul {
+  display: flex;
+  height: 60px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.navbar ul li {
+  list-style-type: none;
+  height: 57px;
+  display: flex;
+  justify-content: center;
+  padding-top: 15px;
+}
+
+.navbar ul li:hover {
+  border-bottom: 4px solid #f43397;
+}
+
+.navbar ul li a {
+  text-decoration: none;
+  color: black;
+  letter-spacing: 1px;
+  font-size: 20px;
+  font-weight: 400;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.navbar ul li a:hover {
+  cursor: pointer;
+  color: #f43397;
+}
+
+.navbar ul li a:hover>.nav-item {
+  background-color: yellow;
+}
+
+.hiddenNav {
+  position: absolute;
+  width: 100%;
+  height: 200px;
+  z-index: 5;
+  border-bottom: 1px solid #acbbbc;
+  border-left: 1px solid #acbbbc;
+  border-right: 1px solid #acbbbc;
+  background-color: white;
+  padding: 20px;
+}
+
+.hiddenNav p {
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.homeContainer {
+  width: 100%;
+  height: 100vh;
+}
