--- a/meesho/src/index.css
+++ b/meesho/src/index.css
@@ -1,7 +1,7 @@
 @import url(fonts/style.css);
 body {
   margin: 0;
-  font-family: "Mier A Light Italic",  sans-serif;
+  font-family: "Mier-Book";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
