--- a/meesho/src/CSS/HomeCare.css
+++ b/meesho/src/CSS/HomeCare.css
@@ -1,78 +1,93 @@
 .homecareView {
     width: 100%;
     height: 100%;
-    position: relative;
     background-image: url("https://images.meesho.com/images/marketing/1646055706531.jpg");
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 120px 90px 50px 90px;
+    border-radius: 4px;
+}
+
+.firstHomeCare {
+    width: 20%;
 }
 
 .firstHomeCareImg {
-    position: absolute;
-    left: 500px;
-    bottom: 135px;
+    width: 100%;
+    height: 100%;
 }
 
 .firstHomeCareImg img {
-    width: 250px;
-    height: 420px;
+    width: 100%;
+    height: 100%;
 }
 
 .BedsheetBtn {
-    position: absolute;
-    left: 500px;
-    bottom: 60px;
+    width: 100%;
+    height: 14%;
+    margin-top: 20px;
 }
 
 .BedsheetBtn img {
-    width: 250px;
-    height: 60px;
+    width: 100%;
+    height: 100%;
     object-fit: contain;
+}
+
+.secondHomeCare {
+    width: 20%;
+    margin: 15px;
 }
 
 .secondHomeCareImg {
-    position: absolute;
-    right: 350px;
-    bottom: 135px;
+    width: 100%;
+    height: 100%;
 }
 
 .secondHomeCareImg img {
-    width: 250px;
-    height: 420px;
+    width: 100%;
+    height: 100%;
 }
 
 .KitchenWareBtn {
-    position: absolute;
-    right: 350px;
-    bottom: 60px;
+    width: 100%;
+    height: 14%;
+    margin-top: 20px;
 }
 
 .KitchenWareBtn img {
-    width: 250px;
-    height: 60px;
+    width: 100%;
+    height: 100%;
     object-fit: contain;
 }
 
+.thirdHomeCare {
+    width: 20%;
+}
+
 .thirdHomeCareImg {
-    position: absolute;
-    right: 80px;
-    bottom: 135px;
+    width: 100%;
+    height: 100%;
 }
 
 .thirdHomeCareImg img {
-    width: 250px;
-    height: 420px;
+    width: 100%;
+    height: 100%;
 }
 
 .CarpetBtn {
-    position: absolute;
-    right: 80px;
-    bottom: 60px;
+    width: 100%;
+    height: 14%;
+    margin-top: 20px;
 }
 
 .CarpetBtn img {
-    width: 250px;
-    height: 60px;
+    width: 100%;
+    height: 100%;
     object-fit: contain;
 }
