--- a/meesho/src/LSPL/signup.module.css
+++ b/meesho/src/LSPL/signup.module.css
@@ -1,10 +1,13 @@
 body{
     margin: 0;
-    background-color: #FDEBF0;
     font-family: sans-serif;
 }
+.body{
+    background-color: #FDEBF0;
+    padding-top: 10px;
+}
 .mainSignupBox{
-    width: 28%;
+    width: 28.5%;
     margin: 50px auto;
     background-color: white;
 }
@@ -12,17 +15,28 @@ body{
     width: 100%;
     border-radius: 8px 8px 0px 0px;
 }
+.Country{
+    color: grey;
+    font-size: 12px;
+    letter-spacing: 1px;
+    margin-top: 30px;
+}
 .PhoneNumDiv{
     display: flex;
+    margin-top: -10px;
 }
-.TelInp{
-    border: 0;
-    border-radius: 0;
-    border-bottom: 2px solid #ccc;
+.IN{
+    font-size: 13px;
+    margin-right: 5px;
+}
+.h4IN{
+    margin-right: 20px;
+    margin-top: 24px;
+    color: #333333ea;
 }
 .upperPart{
     text-align: left;
-    margin: 40px 0px 0px 30px;
+    margin: 50px 0px 0px 45px;
 }
 .SendOTP{
     border: none;
@@ -36,7 +50,45 @@ body{
 }
 .lowerPart{
     margin-top: 180px;
+    font-size: 12px;
+    text-align: center;
+    padding: 30px;
+    color: grey;
+    letter-spacing: 1px;
 }
 .textColor{
     color: #F43397;
+}
+
+/* OTP CSS */
+.ChangeNum{
+    margin-top: 19px;
+    color: #F43397;
+}
+.ChangeNumm{
+    margin-top: 25px;
+    color: #F43397;
+}
+.mainOtpField{
+    display: flex;
+    width: 100%;
+    margin-top: 50px;
+}
+.otpField{
+    width: 12%;
+    margin-right: 10px;
+    border: none;
+    border-bottom: 1.5px solid gray;
+    outline: none;
+    text-align: center;
+    font-size: 20px;
+    line-height: 40px;
+}
+.EnterOtpTo{
+    color: #333333f5;
+}
+.time{
+    color: #535353e0;
+    margin-top: 27px;
+    font-size: 15px;
 }
