--- a/meesho/src/CSS/Home.css
+++ b/meesho/src/CSS/Home.css
@@ -226,3 +226,9 @@
     font-size: 40px;
     font-weight: 700;
 }
+
+.productsList {
+    width: 100%;
+    padding: 0 160px;
+    margin: 50px 0;
+}
