--- a/meesho/src/CSS/Footer.css
+++ b/meesho/src/CSS/Footer.css
@@ -11,8 +11,7 @@
     flex-wrap: wrap;
 }
 
-.title {
-    width: 100%;
+.headingTitle {
     font-size: 36px;
     font-weight: 700;
     line-height: 40px;
@@ -25,6 +24,13 @@
     color: #666666;
     line-height: 28px;
     margin: 20px 0;
+}
+
+.career {
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .content {
