--- a/meesho/src/Resp-css/Footer-Resp.css
+++ b/meesho/src/Resp-css/Footer-Resp.css
@@ -3,7 +3,7 @@
         padding: 50px 30px 50px 30px;
     }
 
-    .title {
+    .headingTitle {
         font-size: 32px;
     }
 
@@ -48,12 +48,16 @@
         padding: 50px 30px 40px 30px;
     }
 
-    .title {
+    .headingTitle {
         font-size: 28px;
     }
 
     .subTitle {
         font-size: 17px;
+    }
+
+    .career {
+        width: 28%;
     }
 
     .content {
@@ -100,7 +104,7 @@
         width: 100%;
     }
 
-    .title {
+    .headingTitle {
         margin: 10px auto;
     }
 
@@ -148,7 +152,7 @@
         width: 100%;
     }
 
-    .title {
+    .headingTitle {
         margin: 10px auto;
     }
 
@@ -197,7 +201,7 @@
         width: 100%;
     }
 
-    .title {
+    .headingTitle {
         margin: 10px auto;
         font-size: 28px;
     }
@@ -269,7 +273,7 @@
         width: 100%;
     }
 
-    .title {
+    .headingTitle {
         margin: 10px auto;
         font-size: 25px;
     }
@@ -350,7 +354,7 @@
         width: 100%;
     }
 
-    .title {
+    .headingTitle {
         margin: 10px auto;
         font-size: 22px;
     }
@@ -435,7 +439,7 @@
         width: 100%;
     }
 
-    .title {
+    .headingTitle {
         margin: 10px auto;
         font-size: 22px;
     }
