made required changes to styles and routes

--- a/meesho/src/index.css
+++ b/meesho/src/index.css
@@ -1,13 +1,14 @@
-/* body {
+@import url(../src/fonts/style.css);
+
+body {
   margin: 0;
-  font-family: "Mier-Book";
+  font-family: 'Mier-Book',sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+/*
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 
 }*/
-
