--- a/meesho/src/CSS/Sub_Navbar.css
+++ b/meesho/src/CSS/Sub_Navbar.css
@@ -4,6 +4,8 @@
     border-bottom: 1px solid #acbbbc;
     padding: 0px 20px;
     position: relative;
+    background-color: white;
+    z-index: 10;
 }
 
 
