--- a/meesho/src/App.css
+++ b/meesho/src/App.css
@@ -9,7 +9,7 @@
 .container {
   width: 100%;
   height: 100vh;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 .firstView {
@@ -35,7 +35,7 @@
 .input::placeholder {
   font-size: 20px;
   font-weight: 400;
-  
+
 }
 
 
@@ -64,7 +64,7 @@
   font-size: 20px;
 
   letter-spacing: 1px;
-  
+
   margin: 0px 10px;
 
 }
@@ -88,7 +88,7 @@
 .supplier p {
   font-size: 20px;
   letter-spacing: 1px;
-  
+
   margin: 0px 5px;
 }
 
@@ -101,14 +101,14 @@
 
 .profile p {
   font-size: 20px;
-  
+
 }
 
 
 .profile p {
   font-size: 20px;
 
-  
+
 }
 
 .cart:hover {
@@ -132,7 +132,7 @@
   font-size: 36px;
   font-weight: 700;
   line-height: 40px;
-  
+
 }
 
 .subTitle {
@@ -148,7 +148,7 @@
   letter-spacing: 1px;
   font-weight: 600;
   color: #666666;
-  
+
 }
 
 .subContent {
@@ -157,7 +157,7 @@
   margin-top: 15px;
   font-weight: 600;
   color: #666666;
-  
+
 }
 
 .contactTitle {
@@ -165,7 +165,7 @@
   letter-spacing: 1px;
   font-weight: 600;
   color: black;
-  
+
 }
 
 .contactIcons {
@@ -240,7 +240,7 @@
   letter-spacing: 1px;
   font-size: 20px;
   font-weight: 400;
-  
+
 }
 
 .navbar ul li a:hover {
@@ -267,120 +267,4 @@
 .hiddenNav p {
   font-size: 22px;
   font-weight: 600;
-}
-
-.homeContainer {
-  width: 100%;
-}
-
-.mainDiv {
-  width: 100%;
-  padding: 60px 160px;
-  display: grid;
-  grid-template-columns: 1.05fr 0.95fr;
-}
-
-.mainContentDiv {
-  width: 100%;
-  height: 400px;
-  padding: 50px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: #f9f9f9;
-}
-
-.mainImageDiv {
-  width: 100%;
-  height: 100%;
-}
-
-.mainImageDiv img {
-  width: 100%;
-  height: 400px;
-  resize: cover;
-}
-
-.mainContentTitle {
-  font-size: 50px;
-  font-weight: 600;
-  
-}
-
-.subTitle {
-  width: 400px;
-  height: 65px;
-  border-radius: 8px;
-  background-color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.mainContentSubTitle {
-  font-size: 25px;
-  font-weight: 600;
-  color: #666666;
-  
-}
-
-.downloadApp {
-  width: 400px;
-  height: 65px;
-  border-radius: 4px;
-  background-color: #f43397;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  padding: 0px 8px;
-}
-
-.downloadApp img {
-  width: 30px;
-  height: 35px;
-}
-
-.downloadApp p {
-  font-size: 23px;
-  font-weight: 600;
-  color: white;
-}
-
-.category {
-  display: flex;
-  padding: 20px 160px;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.hrDivider {
-  width: 300px;
-  height: 0.1px;
-  background-color: #f43397;
-}
-
-.categoryTitle {
-  font-size: 45px;
-  font-weight: 600;
-  
-}
-
-.Fashion {
-  width: 100%;
-  height: 85vh;
-  padding: 0px 160px;
-  margin: 50px 0px;
-}
-
-.Homecare {
-  width: 100%;
-  height: 85vh;
-  padding: 0px 160px;
-  margin: 80px 0px;
-
-
-  font-family: 500;
-
 }
