--- a/meesho/src/CSS/FashionStore.css
+++ b/meesho/src/CSS/FashionStore.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     background-image: url("https://images.meesho.com/images/marketing/1646054607872.jpg");
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     display: flex;
@@ -11,6 +11,7 @@
     align-items: flex-end;
     padding: 35px;
     border-radius: 4px;
+    margin: 50px 0;
 }
 
 .firstFashionImg {
