--- a/meesho/src/CSS/Home.css
+++ b/meesho/src/CSS/Home.css
@@ -1,11 +1,12 @@
 .homeContainer {
     width: 100%;
+    padding: 0px 150px;
 }
 
 .mainDiv {
     width: 100%;
-    padding: 60px 160px;
     display: grid;
+    margin: 50px 0;
     grid-template-columns: 1.05fr 0.95fr;
 }
 
@@ -78,14 +79,14 @@
 
 .category {
     display: flex;
-    padding: 20px 160px;
+    padding: 20px 0px;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
 
 .hrDivider {
-    width: 300px;
+    width: 18vw;
     height: 0.1px;
     background-color: #f43397;
 }
@@ -98,7 +99,7 @@
 
 .Fashion {
     width: 100%;
-    height: 85vh;
+    height: 66vh;
     padding: 0px 160px;
     margin: 50px 0px;
 }
@@ -113,7 +114,6 @@
 .Reseller {
     width: 100%;
     height: 85vh;
-    padding: 0px 160px;
     margin: 50px 0px;
 }
 
@@ -156,7 +156,6 @@
 .Supplier {
     width: 100%;
     height: 45vh;
-    padding: 0px 160px;
     margin: 50px 0px;
 }
 
@@ -219,7 +218,6 @@
 
 .products {
     width: 100%;
-    padding: 0px 160px;
 }
 
 .products p {
