--- a/meesho/src/Resp-css/Navbar-Resp.css
+++ b/meesho/src/Resp-css/Navbar-Resp.css
@@ -34,6 +34,10 @@
     .dd h3 {
         font-size: 20px;
     }
+
+    .respContactBox {
+        display: none;
+    }
 }
 
 @media (min-width:1145px) and (max-width:1334px) {
@@ -72,6 +76,10 @@
     .dd h3 {
         font-size: 18px;
     }
+
+    .respContactBox {
+        display: none;
+    }
 }
 
 @media (min-width:1024px) and (max-width:1146px) {
@@ -105,6 +113,10 @@
 
     .dd h3 {
         font-size: 16px
+    }
+
+    .respContactBox {
+        display: none;
     }
 
 }
