--- a/meesho/src/LSPL/signup.module.css
+++ b/meesho/src/LSPL/signup.module.css
@@ -33,6 +33,7 @@ body{
     margin-right: 20px;
     margin-top: 24px;
     color: #333333ea;
+    border-bottom: 1.5px solid gray;
 }
 .upperPart{
     text-align: left;
@@ -90,5 +91,68 @@ body{
 .time{
     color: #535353e0;
     margin-top: 27px;
-    font-size: 15px;
+    font-size: 12px;
 }
+.title{
+    visibility: hidden;
+}
+@media only screen and (max-width: 768px) {
+    .body {
+      background-color: white;
+    }
+    .mainSignupBox{
+        width: 100%;
+        margin-top: 230px;
+        font-size: 14px;
+        color: #333333;
+        letter-spacing: 0.5px;
+        /* border: 1px solid rebeccapurple; */
+    }
+    .img{
+        display: none;
+    }
+    .upperPart{
+        margin: 0px;
+        padding: 20px;
+    }
+    .SendOTP{
+        width: 100%;
+        padding: 12px;
+        font-size: 14px;
+    }
+    .IN{
+        font-size: 10px;
+    }
+    .h4IN{
+        font-size: 13px;
+        border-bottom: 1.5px solid gray;
+    }
+    .tests{
+        width: 100%; 
+    }
+    .lowerPart{
+        display: flex;
+        width: 100%;
+        margin: 35px auto;
+    }
+    .lowerPartLow{
+        text-align: right;
+        width: 100%;
+        font-size: 10px;
+        letter-spacing: 0.5px;
+    }
+    .lowerPartLoww{
+        text-align: left;
+        width: 100%;
+        font-size: 10px;
+        letter-spacing: 0.5px;
+    }
+    .time{
+        font-size: 12px;
+    }
+    .title{
+        visibility: visible;
+        display: flex;
+        padding: 12px;
+    }
+  }
