--- a/meesho/src/CSS/signup.module.css
+++ b/meesho/src/CSS/signup.module.css
@@ -1,14 +1,18 @@
 body{
     margin: 0;
-    font-family: sans-serif;
+    font-family: sans-serif
 }
 .body{
     background-color: #FDEBF0;
+    width: 100%;
+    height: 100vh;
     padding-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .mainSignupBox{
     width: 28.5%;
-    margin: 50px auto;
     background-color: white;
 }
 .img{
