--- a/meesho/src/CSS/Cart.css
+++ b/meesho/src/CSS/Cart.css
@@ -36,7 +36,7 @@
 
 .cartContainer{
     width: 100%;
-    padding: 50px 300px;
+    padding: 5% 15%;
     display: grid;
     grid-template-columns: 1.2fr 0.8fr;
 }
@@ -285,4 +285,10 @@
 .btn p{
     font-size: 18px;
     color: white;
+}
+@media (max-width:768px){
+    .cartContainer{
+        padding: 5% 0%;
+        grid-template-columns: 1fr;
+    }
 }
