--- a/meesho/src/CSS/CartNavbar.css
+++ b/meesho/src/CSS/CartNavbar.css
@@ -1,14 +1,28 @@
-.cartNavbar{
-    width: 100%;
-    height: 90px;
-    background-color: white;
-    padding-left: 20px;
-    border-bottom: 1px solid #acbbbc;
-    display: flex;
-    align-items: center;
+.cartNavbar {
+  width: 100%;
+  height: 90px;
+  background-color: white;
+  padding-left: 20px;
+  border-bottom: 1px solid #acbbbc;
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
 }
 
-.cartNavbar img{
-    width: 220px;
-    height: 70px;
+.cartNavbar img {
+  width: 220px;
+  height: 70px;
+  margin-right: 22%;
+}
+.stepper {
+  width: 30vw;
+}
+
+@media (max-width: 768px) {
+  .cartNavbar img {
+    display: none;
+  }
+  .stepper {
+    width: 100%;
+  }
 }
