--- a/meesho/src/CSS/Navbar.css
+++ b/meesho/src/CSS/Navbar.css
@@ -137,13 +137,17 @@
     width: 35%;
 }
 
+.profile{
+    position: relative;
+}
+
 .profile:hover {
     cursor: pointer;
     color: #f43397;
     border-bottom: 4px solid #f43397;
 }
 
-.profile:hover>.profileDetail {
+.profile:hover > .profileDetail {
     opacity: 1;
 }
 
@@ -151,9 +155,9 @@
     opacity: 0;
     position: absolute;
     top: 90px;
-    width: 320px;
+    width: 280px;
     height: 240px;
-    z-index: 5;
+    z-index: 100;
     background-color: white;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -164,13 +168,14 @@
     padding: 20px;
     flex-direction: column;
     justify-content: space-between;
-    transition: all 0.5s ease;
+    transition: all 0.5s ease-in-out;
 }
 
 .hrDivider1 {
     width: 100%;
     height: 0.7px;
     background-color: #acbbbc;
+    margin-top: 20px;
 }
 
 .logoutView {
@@ -178,11 +183,44 @@
     align-items: center;
 }
 
+.logoutView:hover{
+    cursor: pointer;
+}
+
 .logoutView p {
     font-size: 23px;
     color: black;
     font-weight: 600;
     margin-left: 20px;
+}
+
+.newUserContent h2{
+    color: black;
+    font-weight: 600;
+}
+
+.newUserContent p{
+    color: #acbbbc;
+    font-size: 16px;
+}
+
+.newSignUpBtn{
+    width: 100%;
+    height: 50px;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f43397;
+}
+
+.newSignUpBtn:hover{
+    cursor: pointer;
+}
+
+.newSignUpBtn p{
+    color: white;
+    font-size: 18px;
 }
 
 .userView {
@@ -286,9 +324,70 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    padding-left: 20px;
+    padding: 20px;
 }
 
 .respContactBox {
     display: none;
+}
+
+.respProfileView{
+    display:flex;
+     width:100%; 
+     justify-content:space-between; 
+     align-items:center
+}
+
+.respProfile{
+    display:flex; 
+    align-items:center
+}
+
+.respSignUpBtn{
+    width: 80px;
+    height: 30px;
+    background-color: #f43397;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+}
+
+.respSignUpBtn p{
+    font-size: 16px;
+    color: white;
+    text-align: center;
+}
+
+.respLogoutView{
+    display: flex;
+    align-items: center;
+    margin: 20px 0;
+}
+
+.respLogoutView p{
+    margin-left: 15px;
+}
+
+.categories{
+    margin: 20px 0;
+}
+
+.respLogout{
+   margin: 20px 15px;
+}
+
+.respLogout p{
+   font-size: 18px;
+   font-weight: 600;
+}
+
+.accordionText a{
+   text-decoration: none;
+}
+
+.accordionText p{
+   font-size: 17px;
+   margin: 5px 0;
+   color: black;
 }
