--- a/meesho/src/CSS/Sub_Navbar.css
+++ b/meesho/src/CSS/Sub_Navbar.css
@@ -51,7 +51,7 @@
 .hiddenNav {
     position: absolute;
     width: 100%;
-    height: 200px;
+    height: 300px;
     z-index: 5;
     border-bottom: 1px solid #acbbbc;
     border-left: 1px solid #acbbbc;
@@ -60,9 +60,102 @@
     background-color: white;
     padding: 20px;
     transition: all 1s ease;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
-.hiddenNav p {
+.indHiddenNav{
+    padding: 15px;
+    width: 200px;
+    height: 298px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.indHiddenNav p{
     font-size: 22px;
-    font-weight: 600;
+    color: #acbbbc;
+    font-weight: 100;
+}
+
+.indHiddenNav a{
+    text-decoration: none;
+}
+
+.indHiddenNav p:hover{
+    cursor: pointer;
+}
+
+.indHiddenNav2{
+    padding: 15px;
+    width: 200px;
+    height: 298px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #ece7e7;
+}
+
+.indHiddenNav2 a{
+    text-decoration: none;
+}
+
+.indHiddenNav2 p{
+    font-size: 22px;
+    color: #acbbbc;
+    font-weight: 100;
+}
+
+.indHiddenNav2 p:hover{
+    cursor: pointer;
+}
+
+.subInputField {
+    width: 100%;
+    padding: 20px;
+    position: relative;
+    display: none;
+}
+
+.newSearchIcon {
+    color: #dbdbdb;
+    position: absolute;
+    top: 35px;
+    left: 25px;
+}
+
+.subInput {
+    width: 100%;
+    height: 70px;
+    outline: none;
+    border: none;
+    caret-color: #f43397;
+    border: 1px solid rgb(153, 153, 153);
+    border-radius: 4px;
+    padding-left: 50px;
+    font-size: 20px;
+}
+
+.input::placeholder {
+    font-size: 20px;
+    font-weight: 400;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.input:focus {
+    box-shadow: 0 3px 5px 0px rgb(20 20 20 / 10%);
+}
+
+.newCloseIcon {
+    position: absolute;
+    top: 35px;
+    right: 25px;
+}
+
+.newCloseIcon:hover {
+    cursor: pointer;
 }
