--- a/meesho/src/Resp-css/Sub-Navbar-Resp.css
+++ b/meesho/src/Resp-css/Sub-Navbar-Resp.css
@@ -29,4 +29,13 @@
 
 }
 
-@media (min-width:992px) and (max-width:1199px) {}
+@media only screen and (max-width:1023px) {
+    .navbar{
+        display: none;
+    }
+
+    .subInputField{
+        display: block;
+    }
+
+}
