--- a/meesho/src/CSS/Home.css
+++ b/meesho/src/CSS/Home.css
@@ -120,104 +120,19 @@
     background-color: yellow;
 } */
 
-.ResellerView {
-    width: 100%;
-    height: 85vh;
-    background-image: url("https://meesho.com/_next/static/images/download_banner-19ca4d63d9c1dc44bc8cbfae62b60bd7.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: flex-start;
-    padding: 70px 50px;
-    margin: 50px 0px;
-}
-
-.ResellerContentView {
-    width: 42vw;
-    height: 15vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-end;
-}
-
-.ResellerTitle {
-    font-size: 2.4vw;
-    font-weight: 700;
-    color: #5585f8;
-}
-
-.ResellerSubTitle {
-    font-size: 3.5vw;
-    font-weight: 700;
-    color: #f43397;
-    text-align: end;
-}
-
-.Supplier {
-    width: 100%;
-    height: 45vh;
-    margin: 50px 0px;
-}
-
-.SupplierView {
+.ResellerNewImg img{
     width: 100%;
     height: 100%;
-    border-radius: 4px;
-    background-image: url("https://meesho.com/_next/static/images/supply_banner_desk-d53b6ffa3ee3c43feedcfdd0f3d9bd8d.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 40px 70px;
+    resize: contain;
+    margin: 50px 0;
 }
 
-.SupplierTitle {
-    font-size: 2.5vw;
-    color: white;
-    font-weight: 600;
-}
-
-.SupplierSubTitle {
-    font-size: 1.8vw;
-    color: white;
-}
-
-.SupplierBenefits {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.indBenefit {
-    display: flex;
-    flex-direction: row;
-}
-
-.indBenefit p {
-    color: white;
-    font-size: 1.6vw;
-    font-weight: 600;
-    margin: 0px 15px;
-}
-
-.signUpBtn {
-    width: 200px;
-    height: 60px;
-    border-radius: 4px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    color: #f43397;
-    font-size: 24px;
-    font-weight: 700;
+.RegisterNewImg img{
+    width: 100%;
+    height: 100%;
+    resize: contain;
+    margin-top: 10px 0;
+    margin-bottom: 50px 0;
 }
 
 .products {
